# adapt-demos

./: .flake8  .gitignore  AI2-README.md  Dockerfile  Makefile  README.md  app-dual.py  app.py  collect_demo_data.py  pyproject.toml
demo_tools/: __init__.py  dummy_chatbot.py  interface.py  model_client.py  prompts.py  style.py
demo_tools/templates/: none.jinja  olmov1.jinja  tulu.jinja  tulu_no_newline.jinja
src/: dummy_chatbot.py  interface.py  prompts.py
templates/: olmov1.jinja  tulu.jinja
