[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai2-chat"
version = "0.1.0"
description = "AI2 Evaluation Chat Tools"
authors = [
    {name = "Nathan Lambert", email = "nathanl@allenai.org"},
]
license = {file = "LICENSE.md"}
requires-python = ">=3.10"

dependencies = [
    "black",
    "flake8",
    "isort",
    "gradio",
    "openai",
]
